2002-05-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-cat.c (stream_read): Don't allow our caller to read
	past the end of the stream.
	(stream_write): Same.
	(stream_seek): Don't forget to add the current source stream's
	bound_start when seeking on the current source stream.

	* gmime-message-partial.c (g_mime_message_partial_init): Zero our
	extra fields.
	(g_mime_message_partial_finalize): Cleanup strdup'd memory.
	(message_partial_set_content_type): Implemented.
	(g_mime_message_partial_class_init): Override set_content_type().
	(g_mime_message_partial_get_id): Simplify.
	(g_mime_message_partial_get_number): Simplify.
	(g_mime_message_partial_get_total): Simplify.

	* gmime-multipart.c (multipart_set_content_type): Implement.
	(g_mime_multipart_class_init): Override set_content_type().

	* gmime-object.c: Make set_content_type() virtual.

2002-05-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-message-partial.c (partial_compare): Fixed to work
	properly.

2002-05-12  Jeffrey Stedfast  <fejj@ximian.com>

	* test-partial.c: New test suite for gmime-message-partial.c.

	* gmime-stream-cat.c: Several fixes.
	(g_mime_stream_cat_class_init): Overload the seek method.

	* gmime-stream-mmap.c (g_mime_stream_mmap_class_init): Overload
	the seek method.

	* gmime-stream-buffer.c (g_mime_stream_buffer_class_init):
	Overload the seek method.

	* gmime-stream-null.c (g_mime_stream_null_class_init): Overload
	the seek method.

	* gmime-stream-filter.c (g_mime_stream_filter_class_init):
	Overload the seek method.

	* gmime-stream.c (g_mime_stream_class_init): Overload the seek
	method.

	* gmime-stream-mem.c (g_mime_stream_mem_class_init): Overload the
	seek method.

	* gmime-stream-file.c (g_mime_stream_file_class_init): Overload
	the seek method.
	(stream_length): The length of the stream is bound_end -
	bound_start.

	* gmime-stream-fs.c (g_mime_stream_fs_class_init): Overload the
	seek method.
	(stream_length): The length of the stream is bound_end -