@@ -1,3 +1,7 @@
+2002-05-14  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime-stream-filter.c (stream_destroy): Removed.
+
 2002-05-12  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime-stream-cat.c (stream_read): Don't allow our caller to read
